--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["sanctum", "sanctum-shared", "sanctum-tui"]
+members = ["sanctum", "sanctum-client", "sanctum-shared", "sanctum-tui"]
 resolver = "3"
