--- a/sanctum-tui/Cargo.toml
+++ b/sanctum-tui/Cargo.toml
@@ -15,4 +15,6 @@ serde_json = "1.0.145"
 time = { version = "0.3.44", features = ["serde"] }
 uuid = { version = "1.18.1", features = ["serde", "v4"] }
 sanctum-shared = { path = "../sanctum-shared" }
+sanctum-client = { path = "../sanctum-client" }
 base64 = "0.22.1"
+tokio = { version = "1.48.0", features = ["full"] }
